# stellar

./: CMakeLists.txt  readme.md
src/: base.cpp  base.hpp  main.cpp  stellar.cpp  stellar.hpp
src/stellar/: jsontrait.hpp  rpc.cpp  rpc.hpp  rpc_resp.cpp  rpc_resp.hpp
